# 42-Call-Me-Maybe

./: .gitignore  Makefile  PYDANTIC.md  README.md  pyproject.toml
data/input/: function_definitions.json  functions_definition.json
llm_sdk/llm_sdk/: __init__.py
src/: ArgsParser.py  CallMeMaybe.py  CallingTests.py  FunctionDefinitions.py  JsonParser.py  OutputFile.py  Tokenizer.py  Vocabulary.py  __main__.py  test.py
src/errors/: CallMeMaybeError.py  FileError.py  OpeningError.py  ParsingError.py  __init__.py
src/utils/: Color.py  Logger.py  Logo.py  ProgressBar.py  __init__.py  is_subsequence.py
